prometheus-monitoring/prometheus-stack-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"        
  name: prometheus-monitoring-grafana
  namespace: prometheus-monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.localdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-monitoring-grafana
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"        
  name: prometheus-monitoring-prometheus
  namespace: prometheus-monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.localdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-monitoring-kube-prometheus
            port:
              number: 9090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"        
  name: prometheus-monitoring-alertmanager
  namespace: prometheus-monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.localdomain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-monitoring-kube-alertmanager
            port:
              number: 9093
